--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IdsStore</title>
-    <link rel="stylesheet" href="../headerAndFooter/css/footer.css">
-    <link rel="stylesheet" href="../headerAndFooter/css/header.css">
-    <link rel="stylesheet" href="./css/idsStore.css">
+    <link rel="stylesheet" href="./general.css">
+    <link rel="stylesheet" href="./header/header.css">
+    <link rel="stylesheet" href="./main/main.css">
 </head>
 <body>
     <header>
-        <div class="idsStore">
-            <div class="idsStore__item">
-                <a href="./idsStore.html">IdsStore</a>
-                <a href="./idsStore.html">Магазин бытовок</a>
-            </div>
-            <div class="idsStore__search">
+        <div class="headerTop">
+            <a href="#" class="headerTop__logo">
+                <span>IdsStore</span>
+                <span>Магазин бытовок</span>
+            </a>
+            <div class="headerTop__search">
                 <input type="text" placeholder="Поиск" maxlength="30" id="search">
-                <img src="../headerAndFooter/img/search.webp">
+                <img src="./header/search.webp">
             </div>
-            <div class="idsStore__contacts">
+            <div class="headerTop__contacts">
                <p>+7(910)973-36-65</p>
                <p>dir@ids76.ru</p> 
             </div>
-            <div class="idsStore__log">
+            <div class="headerTop__log">
                 <button id="login">Войти</button>
                 <button id="register">Зарегистрироваться</button>
             </div>
         </div>
         <div class="services">
-            <a href="">Каталог <img src="../headerAndFooter/img/menu.webp"></a>
+            <a href="">Каталог <img src="./header/menu.webp"></a>
             <a href="">О нас</a>
             <a href="">Услуги</a>
             <a href="">Контакты</a>
             <a href="">Галерея</a>
             <a href="">Отзыввы</a>
-            <a href="" ><img src="../headerAndFooter/img/bag.webp"><div class="services__sum"><p>0</p></div>Корзина</a>
+            <a href="" ><img src="./header/bag.webp"><div class="services__sum"><p>0</p></div>Корзина</a>
         </div>
     </header>
     <main>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="slide__radius">
-                        <img class="img1" src="./img/cubinsForLive.webp">
+                        <img class="img1" src="./main/cubinsForLive.webp">
                     </div>
                 </div>
                 <div class="slide">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="slide__radius">
-                        <img class="img2" src="./img/cubinsForwareHouse.webp">
+                        <img class="img2" src="./main/cubinsForwareHouse.webp">
                     </div>
                 </div>
                 <div class="slide">
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="slide__radius">
-                        <img class="img3" src="./img/cubinsForBath.webp">
+                        <img class="img3" src="./main/cubinsForBath.webp">
                     </div>
                 </div>
                 <div class="slide">
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="slide__radius">
-                        <img class="img4" src="./img/cubinsForWork.webp">
+                        <img class="img4" src="./main/cubinsForWork.webp">
                     </div>
                 </div>
                 <div class="navigation-auto">
@@ -115,10 +115,10 @@
             </div>
 
             <div class="navigation">
-                <label for="r1" class="bar"></label>
-                <label for="r2" class="bar"></label>
-                <label for="r3" class="bar"></label>
-                <label for="r4" class="bar"></label>
+                <label for="r1" class="navigation__bar"></label>
+                <label for="r2" class="navigation__bar"></label>
+                <label for="r3" class="navigation__bar"></label>
+                <label for="r4" class="navigation__bar"></label>
             </div>
         </div>
     </main>
