--- a/index.html
+++ b/index.html
@@ -40,87 +40,221 @@
         </div>
     </header>
     <main>
-        <div class="slider">
-            <div class="slides">
-                <input type="radio" name="r" id="r1" checked>
-                <input type="radio" name="r" id="r2">
-                <input type="radio" name="r" id="r3">
-                <input type="radio" name="r" id="r4">
-                <div class="slide s1">
-                    <div class="slide__contant">
-                        <div class="slide__text">
-                            <h2>Бытовки для проживания</h2>
-                            <p>Аренда бытовок от 5000руб</p>
+        <div class="fd-row">
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="r" id="r1" checked>
+                    <input type="radio" name="r" id="r2">
+                    <input type="radio" name="r" id="r3">
+                    <input type="radio" name="r" id="r4">
+                    <div class="slide s1">
+                        <div class="slide__contant">
+                            <div class="slide__text">
+                                <h2>Бытовки для проживания</h2>
+                                <p>Аренда бытовок от 5000руб</p>
+                            </div>
+                            <div class="slide__button">
+                                <a href="" class="more">подробнее</a>
+                                <a href=""><div class="block"></div></a>
+                            </div>
                         </div>
-                        <div class="slide__button">
-                            <a href="" class="more">подробнее</a>
-                            <a href=""><div class="block"></div></a>
+                        <div class="slide__radius">
+                            <img class="img1" src="./main/cubinsForLive.webp">
                         </div>
                     </div>
-                    <div class="slide__radius">
-                        <img class="img1" src="./main/cubinsForLive.webp">
+                    <div class="slide">
+                        <div class="slide__contant">
+                            <div class="slide__text">
+                                <h2>Бытовки под склад</h2>
+                                <p>доствка по всей россии</p>
+                            </div>
+                            <div class="slide__button">
+                                <a href="" class="more">подробнее</a>
+                                <a href=""><div class="block"></div></a>
+                            </div>
+                        </div>
+                        <div class="slide__radius">
+                            <img class="img2" src="./main/cubinsForwareHouse.webp">
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="slide__contant">
+                            <div class="slide__text">
+                                <h2>Бытовки c душем</h2>
+                                <p>лучшие бытовки только у нас</p>
+                            </div>
+                            <div class="slide__button">
+                                <a href="" class="more">подробнее</a>
+                                <a href=""><div class="block"></div></a>
+                            </div>
+                        </div>
+                        <div class="slide__radius">
+                            <img class="img3" src="./main/cubinsForBath.webp">
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="slide__contant">
+                            <div class="slide__text">
+                                <h2>Бытовки прорабские </h2>
+                                <p>Аренда бытовок от 5000руб</p>
+                            </div>
+                            <div class="slide__button">
+                                <a href="" class="more">подробнее</a>
+                                <a href=""><div class="block"></div></a>
+                            </div>
+                        </div>
+                        <div class="slide__radius">
+                            <img class="img4" src="./main/cubinsForWork.webp">
+                        </div>
+                    </div>
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
                     </div>
                 </div>
-                <div class="slide">
-                    <div class="slide__contant">
-                        <div class="slide__text">
-                            <h2>Бытовки под склад</h2>
-                            <p>доствка по всей россии</p>
-                        </div>
-                        <div class="slide__button">
-                            <a href="" class="more">подробнее</a>
-                            <a href=""><div class="block"></div></a>
-                        </div>
-                    </div>
-                    <div class="slide__radius">
-                        <img class="img2" src="./main/cubinsForwareHouse.webp">
-                    </div>
-                </div>
-                <div class="slide">
-                    <div class="slide__contant">
-                        <div class="slide__text">
-                            <h2>Бытовки c душем</h2>
-                            <p>лучшие бытовки только у нас</p>
-                        </div>
-                        <div class="slide__button">
-                            <a href="" class="more">подробнее</a>
-                            <a href=""><div class="block"></div></a>
-                        </div>
-                    </div>
-                    <div class="slide__radius">
-                        <img class="img3" src="./main/cubinsForBath.webp">
-                    </div>
-                </div>
-                <div class="slide">
-                    <div class="slide__contant">
-                        <div class="slide__text">
-                            <h2>Бытовки прорабские </h2>
-                            <p>Аренда бытовок от 5000руб</p>
-                        </div>
-                        <div class="slide__button">
-                            <a href="" class="more">подробнее</a>
-                            <a href=""><div class="block"></div></a>
-                        </div>
-                    </div>
-                    <div class="slide__radius">
-                        <img class="img4" src="./main/cubinsForWork.webp">
-                    </div>
-                </div>
-                <div class="navigation-auto">
-                    <div class="auto-btn1"></div>
-                    <div class="auto-btn2"></div>
-                    <div class="auto-btn3"></div>
-                    <div class="auto-btn4"></div>
+                <div class="navigation">
+                    <label for="r1" class="navigation__bar"></label>
+                    <label for="r2" class="navigation__bar"></label>
+                    <label for="r3" class="navigation__bar"></label>
+                    <label for="r4" class="navigation__bar"></label>
                 </div>
             </div>
+            <a href="" class="card">
+                <div class="fd-row">
+                    <h2>Товар месяца</h2>
+                    <p class="card__arrow">→</p>
+                </div>
+                <img class="card__cubinsForDress" src="./main/cubinsForDress.webp">
+                <p class="rent">Аренда</p>
+                <p class="info">бытовка раздевалка (металлическая)</p>
+                <p class="discount">9000</p>
+                <div class="fd-row">
+                    <p class="card__price">7500₽</p>  
+                    <!-- TODO: почему при создании еще одного тега <a> он берет css свойства у класса card -->
+                    <!-- <a href="" class="vido"></a>  -->
+                    <button class="card__bag"><img src="./main/bag-_1_-1.webp"></button>
+                </div>
+            </a>
+        </div>
+        <div class="line"></div>
+        <div class="fd-row">
+            <div class="advantages">
+                <img src="./main/money.webp">
+                <h2>Аренда без залога</h2>
+                <p>мы предлагаем аренду бытовок и контейнеров без залога</p>
+            </div>
+            <div class="advantages">
+                <img src="./main/discount.webp">
+                <h2>Скидка от 3х месяцев</h2>
+                <p>Особые условия сотрудничества для постоянных клиентов</p>
+            </div>
+            <div class="advantages">
+                <img src="./main/services.webp">
+                <h2>Качественный сервис</h2>
+                <p>Поможем с обслуживанием товара и предоствим ремонт техники</p>
+            </div>
+        </div>
+        <div class="line"></div>
+        <div class="fd-row">
+            <div class="content">
+                <h3>IdsStore</h2>
+                <h2>Cобери свой идеальный комплект бытовки</h2>
+                <p>мы предлагаем собрать комплект мебели и обарудывания для твоей бытовки</p>
+                <div class="content__row">
+                    <a href="" class="content__Youtube"><div class="block1"></div></a>
+                    <p class="content__text">Наш Youtube канал</p>
+                </div>
+            </div>
+            <div class="choose">
+                <button class="more">выбрать формат</button>
+                <img src="./main/emptyCubins.webp">
+                <h1>IdsStore</h1>
+            </div>
 
-            <div class="navigation">
-                <label for="r1" class="navigation__bar"></label>
-                <label for="r2" class="navigation__bar"></label>
-                <label for="r3" class="navigation__bar"></label>
-                <label for="r4" class="navigation__bar"></label>
+        </div>
+        <div class="furniture">
+                <div class="content">
+                    <h2>выберети мебель и оборудывание</h2>
+                    <p>для создание комплекта вам нужно выбрать мебель</p>
+                    <div class="content__row">
+                        <button id="content__prev">←</button>
+                        <button id="content__next">→</button>
+                    </div>
+                </div>
+            <div class="slider">
+                <div class="slider-line">
+                    <a href="" class="card">
+                        <div class="fd-row">
+                            <img src="./main/fiveStars.webp" alt="">
+                            <p class="card__arrow">→</p>
+                        </div>
+                        <img class="card__img" src="./main/chair.webp">
+                        <p class="info">офисный стул</p>
+                        <p class="discount">800</p>
+                        <p class="card__price">500₽</p> 
+                        <button class="card__bag">+</button>
+                    </a>
+                    <a href="" class="card">
+                        <div class="fd-row">
+                            <img src="./main/fiveStars.webp" alt="">
+                            <p class="card__arrow">→</p>
+                        </div>
+                        <img class="card__img" src="./main/table.webp">
+                        <p class="info">офисный стол</p>
+                        <p class="discount">1000</p>
+                        <p class="card__price">700₽</p> 
+                        <button class="card__bag">+</button>
+                    </a>
+                    <a href="" class="card">
+                        <div class="fd-row">
+                            <img src="./main/fiveStars.webp" alt="">
+                            <p class="card__arrow">→</p>
+                        </div>
+                        <img class="card__img" src="./main/bad.webp">
+                        <p class="info">кровать</p>
+                        <p class="discount">1500</p>
+                        <p class="card__price">1200₽</p> 
+                        <button class="card__bag">+</button>
+                    </a>
+                    <a href="" class="card">
+                        <div class="fd-row">
+                            <img src="./main/fiveStars.webp" alt="">
+                            <p class="card__arrow">→</p>
+                        </div>
+                        <img class="card__img" src="./main/chair.webp">
+                        <p class="info">офисный стул</p>
+                        <p class="discount">800</p>
+                        <p class="card__price">500₽</p> 
+                        <button class="card__bag">+</button>
+                    </a>
+                    <a href="" class="card">
+                        <div class="fd-row">
+                            <img src="./main/fiveStars.webp" alt="">
+                            <p class="card__arrow">→</p>
+                        </div>
+                        <img class="card__img" src="./main/table.webp">
+                        <p class="info">офисный стол</p>
+                        <p class="discount">1000</p>
+                        <p class="card__price">700₽</p> 
+                        <button class="card__bag">+</button>
+                    </a>
+                    <a href="" class="card">
+                        <div class="fd-row">
+                            <img src="./main/fiveStars.webp" alt="">
+                            <p class="card__arrow">→</p>
+                        </div>
+                        <img class="card__img" src="./main/bad.webp">
+                        <p class="info">кровать</p>
+                        <p class="discount">1500</p>
+                        <p class="card__price">1200₽</p> 
+                        <button class="card__bag">+</button>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
+    <script src="./slider.js"></script>
 </body>
 </html>
